 - Status effects have been split up into four different categories: physical (red outline), magical (blue outline), lust (pink outline) and other (green outline).
 - Items can now provide status effect resistance. Green scented candle gives you poison resistance.
* Warlock job added. Learn from Jeanne.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4s
------------
* Added a missing Terry-mpreg-pc trigger for his Worship -> Anal catch scene
* Made an adjustment to the run formula, which should work as intended now
* Meditation scenes added for the player, allowing you to drain lust
* Added the elementalist job (learned from Jeanne)
* A bunch of web-programming issues were looked at by someone with far more experience than me. Thanks VioletVolatile!
 - Some GUI issues were adressed
 - There's a new build system, based on Node.js and Gulp. This won't affect 99% of players
 - Save compression is now used for the "online" saves (localStorage), significantly reducing the size of saves. This will not affect save editing, since the SaveToFile and SaveToText functionality are unchanged
* Fuckton of typos fixed
* Maria got some new talk topics, and ranger training. Written by The Observer
* A new combat encounter added to the Highlands. Written by The Observer
* A group combat encounter added to the Highlands, with all the new "scouts" enemies. Written by The Observer. Only has loss scenes written for the moment, no win scenes. One of the loss scenes requires you to be a female/herm cat
* Fixed a pregnancy bug that'd make butt-pregs behave really weird. Pregnancy stage messages should work as intended now

Version 0.4r
------------
* Yet more typos
* Fixed so that the new cats scene [Present] option properly activates mpreg for those that have the perk
* Felines now tend to come in bigger groups than before