@@ -231,10 +231,11 @@ Jobs["Acolyte"].abilities.AddAbility(Abilities.White.Heal);
 Jobs["Acolyte"].abilities.AddAbility(Abilities.White.Preach);
 Jobs["Acolyte"].abilities.AddAbility(Abilities.White.Toughen);
 Jobs["Acolyte"].abilities.AddAbility(Abilities.White.Empower);
+Jobs["Acolyte"].abilities.AddAbility(Abilities.White.Cleanse);
 Jobs["Acolyte"].levels.push(new JobLevel(10,  [{ab: Abilities.White.Heal, set: "Support"}], {"int" : 0.2}));
 Jobs["Acolyte"].levels.push(new JobLevel(20,  null, {"int" : 0.1, "spi" : 0.1}));
 Jobs["Acolyte"].levels.push(new JobLevel(40,  [{ab: Abilities.White.Preach, set: "Support"}], {"int" : 0.1, "cha" : 0.1}));
-Jobs["Acolyte"].levels.push(new JobLevel(80,  null, {"int" : 0.2}));
+Jobs["Acolyte"].levels.push(new JobLevel(80,  [{ab: Abilities.White.Cleanse, set: "Support"}], {"int" : 0.2}));
 Jobs["Acolyte"].levels.push(new JobLevel(160, [{ab: Abilities.White.Toughen, set: "Support"}], {"int" : 0.1, "spi" : 0.1}));
 Jobs["Acolyte"].levels.push(new JobLevel(320, null, {"int" : 0.1, "cha" : 0.1}));
 Jobs["Acolyte"].levels.push(new JobLevel(640, [{ab: Abilities.White.Empower, set: "Support"}, {ab: Abilities.White.Sermon, set: "Support"}], {"int" : 0.2, "spi" : 0.2, "cha" : 0.2, "hp" : 5, "sp" : 10}));
@@ -365,12 +366,13 @@ Jobs["Mage"].abilities.AddAbility(Abilities.Black.Surge);
 Jobs["Mage"].abilities.AddAbility(Abilities.Black.Fireball);
 Jobs["Mage"].abilities.AddAbility(Abilities.Black.Freeze);
 Jobs["Mage"].abilities.AddAbility(Abilities.Black.Bolt);
+Jobs["Mage"].abilities.AddAbility(Abilities.White.Dispel);
 Jobs["Mage"].levels.push(new JobLevel(20,   [{ab: Abilities.Black.Surge, set: "Spells"}], {"int" : 0.3}));
 Jobs["Mage"].levels.push(new JobLevel(40,   null, {"int" : 0.1, "spi" : 0.2}));
 Jobs["Mage"].levels.push(new JobLevel(80,   [{ab: Abilities.Black.Fireball, set: "Spells"}], {"int" : 0.2, "sta" : 0.1}));
 Jobs["Mage"].levels.push(new JobLevel(160,  null, {"int" : 0.2, "cha" : 0.1}));
 Jobs["Mage"].levels.push(new JobLevel(320,  [{ab: Abilities.Black.Freeze, set: "Spells"}], {"int" : 0.2, "dex" : 0.1}));
-Jobs["Mage"].levels.push(new JobLevel(640,  null, {"int" : 0.1, "spi" : 0.2}));
+Jobs["Mage"].levels.push(new JobLevel(640,  [{ab: Abilities.White.Dispel, set: "Support"}], {"int" : 0.1, "spi" : 0.2}));
 Jobs["Mage"].levels.push(new JobLevel(1280, [{ab: Abilities.Black.Bolt, set: "Spells"}, {ab: Abilities.Black.Eruption, set: "Spells"}], {"int" : 0.4, "spi" : 0.1, "sp" : 5}));
 Jobs["Mage"].Unlocked = function(entity) {
 	return Scenes.Global.MagicStage1();
@@ -387,10 +389,11 @@ Jobs["Mystic"].abilities.AddAbility(Abilities.Black.Spray);
 Jobs["Mystic"].abilities.AddAbility(Abilities.Black.Spire);
 Jobs["Mystic"].abilities.AddAbility(Abilities.Black.Gust);
 Jobs["Mystic"].abilities.AddAbility(Abilities.Black.Venom);
+Jobs["Mystic"].abilities.AddAbility(Abilities.White.Purify);
 Jobs["Mystic"].levels.push(new JobLevel(20,   [{ab: Abilities.Black.Thorn, set: "Spells"}], {"sta" : 0.3}));
 Jobs["Mystic"].levels.push(new JobLevel(40,   null, {"int" : 0.1, "spi" : 0.2}));
 Jobs["Mystic"].levels.push(new JobLevel(80,   [{ab: Abilities.Black.Spray, set: "Spells"}], {"spi" : 0.3}));
-Jobs["Mystic"].levels.push(new JobLevel(160,  null, {"sta" : 0.2, "spi" : 0.1}));
+Jobs["Mystic"].levels.push(new JobLevel(160,  [{ab: Abilities.White.Purify, set: "Support"}], {"sta" : 0.2, "spi" : 0.1}));
 Jobs["Mystic"].levels.push(new JobLevel(320,  [{ab: Abilities.Black.Spire, set: "Spells"}], {"int" : 0.2, "str" : 0.1}));
 Jobs["Mystic"].levels.push(new JobLevel(640,  [{ab: Abilities.Black.Gust, set: "Spells"}], {"int" : 0.1, "lib" : 0.2}));
 Jobs["Mystic"].levels.push(new JobLevel(1280, [{ab: Abilities.Black.Venom, set: "Spells"}, {ab: Abilities.Black.Stalagmite, set: "Spells"}], {"spi" : 0.4, "sta" : 0.1}));
@@ -404,17 +407,15 @@ Jobs["Healer"].Long = function(entity) {
 	return Text.Parse("As a proficient healer, [name] know[s] the bare essentials of caring for the wounded in [hisher] party, keeping them alive in any and all situations. [HisHer] healing hands can ease the pain of minor wounds and nurse people back to health.", parse);
 }
 Jobs["Healer"].preqs.push({job : Jobs["Scholar"], lvl : 3});
-Jobs["Healer"].abilities.AddAbility(Abilities.White.Detox);
-Jobs["Healer"].abilities.AddAbility(Abilities.White.Cool);
-Jobs["Healer"].abilities.AddAbility(Abilities.White.Warm);
 Jobs["Healer"].abilities.AddAbility(Abilities.White.Heal);
-Jobs["Healer"].levels.push(new JobLevel(20,   [{ab: Abilities.White.Detox, set: "Support"}], {"spi" : 0.3}));
+Jobs["Healer"].abilities.AddAbility(Abilities.White.Cleanse);
+Jobs["Healer"].levels.push(new JobLevel(20,   null, {"spi" : 0.3}));
 Jobs["Healer"].levels.push(new JobLevel(40,   null, {"int" : 0.2, "cha" : 0.1}));
-Jobs["Healer"].levels.push(new JobLevel(80,   [{ab: Abilities.White.Cool, set: "Support"}], {"sta" : 0.2, "spi" : 0.1}));
+Jobs["Healer"].levels.push(new JobLevel(80,   [{ab: Abilities.White.Heal, set: "Support"}], {"sta" : 0.2, "spi" : 0.1}));
 Jobs["Healer"].levels.push(new JobLevel(160,  null, {"spi" : 0.2, "int" : 0.1}));
-Jobs["Healer"].levels.push(new JobLevel(320,  [{ab: Abilities.White.Warm, set: "Support"}], {"int" : 0.3}));
+Jobs["Healer"].levels.push(new JobLevel(320,  [{ab: Abilities.White.Cleanse, set: "Support"}], {"int" : 0.3}));
 Jobs["Healer"].levels.push(new JobLevel(640,  null, {"cha" : 0.2, "sta" : 0.1}));
-Jobs["Healer"].levels.push(new JobLevel(1280, [{ab: Abilities.White.Heal, set: "Support"}, {ab: Abilities.White.Recover, set: "Support"}], {"spi" : 0.4, "int" : 0.1, "sp" : 5}));
+Jobs["Healer"].levels.push(new JobLevel(1280, [{ab: Abilities.White.Recover, set: "Support"}], {"spi" : 0.4, "int" : 0.1, "sp" : 5}));
 Jobs["Healer"].Unlocked = function(entity) {
 	return Scenes.Global.MagicStage1();
 }
@@ -429,9 +430,9 @@ Jobs["Singer"].preqs.push({job : Jobs["Courtesan"], lvl : 3});
 Jobs["Singer"].abilities.AddAbility(Abilities.Seduction.Lull);
 Jobs["Singer"].levels.push(new JobLevel(20,   [{ab: Abilities.Seduction.Lull, set: "Support"}], {"spi" : 0.3}));
 Jobs["Singer"].levels.push(new JobLevel(40,   null, {"int" : 0.2, "cha" : 0.1}));
-Jobs["Singer"].levels.push(new JobLevel(80,   [{ab: Abilities.White.Cool, set: "Support"}], {"sta" : 0.2, "spi" : 0.1}));
+Jobs["Singer"].levels.push(new JobLevel(80,   null, {"sta" : 0.2, "spi" : 0.1}));
 Jobs["Singer"].levels.push(new JobLevel(160,  null, {"spi" : 0.2, "int" : 0.1}));
-Jobs["Singer"].levels.push(new JobLevel(320,  [{ab: Abilities.White.Warm, set: "Support"}], {"int" : 0.3}));
+Jobs["Singer"].levels.push(new JobLevel(320,  null, {"int" : 0.3}));
 Jobs["Singer"].levels.push(new JobLevel(640,  null, {"cha" : 0.2, "sta" : 0.1}));
 Jobs["Singer"].levels.push(new JobLevel(1280, [{ab: Abilities.White.Heal, set: "Support"}], {"spi" : 0.4, "int" : 0.1}));
 Jobs["Singer"].Unlocked = function(entity) {
